Fix two scroll bars overlapping
Issue-ID: SDC-4615

--- a/catalog-ui/src/app/ng2/components/ui/modal/modal.component.less
+++ b/catalog-ui/src/app/ng2/components/ui/modal/modal.component.less
@@ -17,6 +17,15 @@
     display: flex;
     align-items: center;
 
+    /deep/ .component-container {
+        max-height: 500px;
+        overflow: scroll;
+        padding: 0 5px;
+        &::-webkit-scrollbar-track {
+            border: 0;
+        }
+    }
+
     .ng2-modal-content {
         background: #fff;
         width: 100%;
